--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- گالری عکس -->
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 bg-primary text-white text-center p-3">
                 باکس ۱ (col-12 col-sm-6 col-md-4 col-lg-3)
