--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
       <section class="row mt-4">
         <div class="col-12 col-md-4 mb-4">
           <div class="card">
-            <img
-              src="/assets/image/image 3.png"
-              class="card-img-top"
-              alt="خدمات ۱"
-            />
+            <img src="/assets/image/image 3.png" class="card-img-top rounded-3"alt="">
             <div class="card-body">
               <h5 class="card-title">خدمات ۱</h5>
               <p class="card-text">توضیحات کوتاه درباره خدمات ۱.</p>
@@ -39,11 +35,7 @@
         </div>
         <div class="col-12 col-md-4 mb-4">
           <div class="card">
-            <img
-              src="/assets/image/02.jpg"
-              class="card-img-top"
-              alt="خدمات ۲"
-            />
+            <img src="/assets/image/02.jpg" class="card-img-top rounded-3" alt="">
             <div class="card-body">
               <h5 class="card-title">خدمات ۲</h5>
               <p class="card-text">توضیحات کوتاه درباره خدمات ۲.</p>
@@ -52,11 +44,7 @@
         </div>
         <div class="col-12 col-md-4 mb-4">
           <div class="card">
-            <img
-              src="/assets/image/03.jpg"
-              class="card-img-top"
-              alt="خدمات ۳"
-            />
+            <img src="/assets/image/03.jpg" class="card-img-top rounded-3" alt="">
             <div class="card-body">
               <h5 class="card-title">خدمات ۳</h5>
               <p class="card-text">توضیحات کوتاه درباره خدمات ۳.</p>
