--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="/assets/image/02.jpg" class="card-img-top rounded-3" alt="">
             <div class="card-body">
               <h5 class="card-title">خدمات ۲</h5>
-              <p class="card-text">توضیحات کوتاه درباره خدمات ۲.</p>
+              <p class="card-text">توضیحات کوتاه درباره خدمات. ۲</p>
             </div>
           </div>
         </div>
